# CopyLine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cli/: main.cpp
src/clipboard/: clipboard.cpp  clipboard.h
src/core/: core.cpp  core.h
src/daemon/: main.cpp
src/daemon/clipboard/: clipboard.cpp  clipboard.h
src/daemon/config/: config.cpp  config.h
src/daemon/core/: core.cpp  core.h
src/daemon/input/: input.cpp  input.h
src/daemon/ipc/: ipc.cpp  ipc.h
src/daemon/paste/: paste.cpp  paste.h
src/daemon/queue/: queue.cpp  queue.h
src/daemon/tray/: tray.cpp  tray.h
src/input/: input.cpp  input.h
src/paste/: paste.cpp  paster.h
src/queue/: queue.cpp  queue.h
